Rhinosizes.png now scales to screen size and has a maximum width of 1000 pixels

--- a/ExamTask1/index.html
+++ b/ExamTask1/index.html
@@ -82,8 +82,10 @@
 		</table>
 	</div>
 </div>
-<img src="Image/Rhinosizes.png" width="800" height="400" alt="The size of the five rhino species is shown. The order from largest to smallest is Indian, White, Black, Javan and lastly Sumatran." title="Comparison of the sizes of the five rhino species">
+<div style="max-width: 1000px" >
 
+<img src="Image/Rhinosizes.png" style="max-width:100%;" alt="The size of the five rhino species is shown. The order from largest to smallest is Indian, White, Black, Javan and lastly Sumatran." title="Comparison of the sizes of the five rhino species">
+</div>
 
 
 <script>
@@ -167,7 +169,7 @@ function distance(lat1,lon1,lat2,lon2) {
 }
 
 function calcDistance() {
-	
+
 	wdistance = distance(lat,wlat,lon,wlon);
 	bdistance = distance(lat,blat,lon,blon);
 	idistance = distance(lat,ilat,lon,ilon);
