Add content about white rhinos and change font to Arial

--- a/ExamTask1/index.html
+++ b/ExamTask1/index.html
@@ -11,8 +11,26 @@
 <body>
    
 <h1> Rhinos </h1>
+<h4> by Sachin Rajgopal </h4>
 
 <h2> White Rhino </h2>
+<p class="responsive"> 
+The white rhinoceros is the largest of all of current rhino species. The origin of the name, white whino, is unknown. 
+A name better suited to it is its alternative name, the square-lipped rhino. The square lips are perfectly adapted for it to eat its diet of grass.
+With it can forage grass efficiently and does not have pick grass pieces one by one. It has two horns, of which the one further away from the face is larger.
+</p>
+
+<p class="responsive"> 
+There are two sub species of the white rhino : the southern and the northern. There are approximately 20000 southern white rhinos in the wild. Its conservation status is Not Threatened. 
+They can be found in southern Africa, in nations like South Africa, Namibia, etc. It has also been introduced to east Africa, in Kenya and Tanzania.
+</p>
+
+<p class="responsive"> 
+The northern white rhino has only three remaining individuals left. It is essentially functionally extinct, meaning that there is no realistic chance that the population can recover.
+It used to be able to found in DRC Congo and Uganda, but now all individuals came from a zoo in Czech Republic and live in Kenya.
+</p>
+
+
 <h2> Black Rhino </h2>
 <h2> Indian Rhino </h2>
 <h2> Sumatran Rhino </h2>
@@ -22,7 +40,7 @@
 
 <div class="outer">
   <div class="inner">
-    <table align="left">
+    <table align="left" >
         <tr>
           <th class=fix>Rhino species</th>
           <th>White</th>
@@ -84,7 +102,7 @@
 </div>
 <div style="max-width: 1000px" >
 
-<img src="Image/Rhinosizes.png" style="max-width:100%;" alt="The size of the five rhino species is shown. The order from largest to smallest is Indian, White, Black, Javan and lastly Sumatran." title="Comparison of the sizes of the five rhino species">
+<img src="Image/Rhinosizes.png" style="max-width:100%;" alt="The size of the five rhino species is shown. The order from largest to smallest is: White and Indian are roughly equal, Black, Javan and lastly Sumatran." title="Comparison of the sizes of the five rhino species">
 </div>
 
 
