--- a/ExamTask1/index.html
+++ b/ExamTask1/index.html
@@ -5,208 +5,187 @@
 	<meta charset="utf-8">
     <title> This is the first Mobile Computing task </title>
 	<meta name="viewport" content="width=device-width, initial-scale=1" /> 
+	<script src="js/script.js"></script>
     <link rel="stylesheet" href="css/style.css">
+	
+	<p align="left">
+	
+	<a href="javascript:void(0)" onclick="selectSection(0);">About rhinos</a> | 
+	<a href="javascript:void(0)" onclick="selectSection(1);">Rhino species</a> |  
+	<a href="javascript:void(0)" onclick="selectSection(2);">Location of rhino species</a> |
+	<a href="javascript:void(0)" onclick="selectSection(3);">Poaching</a> |
+	<a href="javascript:void(0)" onclick="selectSection(4);">Images</a>
+
+</p>
 </head>
 
 <body>
    
 <h1> Rhinos </h1>
 <h4> by Sachin Rajgopal </h4>
+<section id="about">
+	<h2> About Rhinos </h2>
+</section>
 
-<h2> White Rhino </h2>
-<p class="responsive"> 
-The white rhinoceros is the largest of all of current rhino species. The origin of the name, white whino, is unknown. 
-A name better suited to it is its alternative name, the square-lipped rhino. The square lips are perfectly adapted for it to eat its diet of grass.
-With it can forage grass efficiently and does not have pick grass pieces one by one. It has two horns, of which the one further away from the face is larger.
-</p>
+<section id="species" class="content">
+	<h2> White Rhino </h2>
+	<p class="responsive"> 
+	The white rhinoceros is the largest of all of current rhino species. The origin of the name, white whino, is unknown. 
+	A name better suited to it is its alternative name, the square-lipped rhino. The square lips are perfectly adapted for it to eat its diet of grass.
+	With it can forage grass efficiently and does not have pick grass pieces one by one. It has two horns, of which the one further away from the face is larger.
+	</p>
 
-<p class="responsive"> 
-There are two sub species of the white rhino : the southern and the northern. There are approximately 20000 southern white rhinos in the wild. Its conservation status is Not Threatened. 
-They can be found in southern Africa, in nations like South Africa, Namibia, etc. It has also been introduced to east Africa, in Kenya and Tanzania.
-</p>
+	<p class="responsive"> 
+	There are two sub species of the white rhino : the southern and the northern. There are approximately 20000 southern white rhinos in the wild. Its conservation status is Not Threatened. 
+	They can be found in southern Africa, in nations like South Africa, Namibia, etc. It has also been introduced to east Africa, in Kenya and Tanzania.
+	</p>
 
-<p class="responsive"> 
-The northern white rhino has only three remaining individuals left. It is essentially functionally extinct, meaning that there is no realistic chance that the population can recover.
-It used to be able to found in DRC Congo and Uganda, but now all individuals came from a zoo in Czech Republic and live in Kenya.
-</p>
+	<p class="responsive"> 
+	The northern white rhino has only three remaining individuals left. It is essentially functionally extinct, meaning that there is no realistic chance that the population can recover.
+	It used to be able to found in DRC Congo and Uganda, but now all individuals came from a zoo in Czech Republic and live in Kenya.
+	</p>
 
 
-<h2> Black Rhino </h2>
-<h2> Indian Rhino </h2>
-<h2> Sumatran Rhino </h2>
-<h2> Javan Rhino </h2>
+	<h2> Black Rhino </h2>
+	<h2> Indian Rhino </h2>
+	<h2> Sumatran Rhino </h2>
+	<h2> Javan Rhino </h2>
 
-<h2> Comparison Table </h2>
+	<h2> Comparison Table </h2>
 
-<div class="outer">
-  <div class="inner">
-    <table align="left" >
-        <tr>
-          <th class=fix>Rhino species</th>
-          <th>White</th>
-          <th>Black</th>
-          <th>Indian</th>
-          <th>Sumatran</th>
-          <th>Javan</th>
-        </tr>
-        <tr>
-          <th class=fix>Population</th>
-          <td>20000</td>
-          <td>5000</td>
-          <td>3500</td>
-          <td>100</td>
-          <td>60</td>
-        </tr>
-        <tr>
-          <th class=fix>Habitat</th>
-          <td>Southern Africa</td>
-          <td>Eastern and Southern Africa</td>
-          <td>Northeast India and Nepal</td>
-          <td>Sumatra and Borneo, Indonesia</td>
-          <td>Java, Indonesia</td>
-        </tr>
-    </table>
-  </div>
-</div>
 
-<button onclick="getLocation()">Get initial location</button>
-
-<p id="geoloc">Geolocation not available.</p>
-
-<button id="calc" onclick="calcDistance()">Get distance to initial location</button>
-
-<!--
-<p id="dist">Distance not detected yet. </p>
--->
-<div class="outer">
-	<div class="inner">
-		<table>
+	<div class="outer">
+	  <div class="inner">
+		<table align="left" >
 			<tr>
-				<th class=fix>Rhino species</th>
-				<th>White</th>
-				<th>Black</th>
-				<th>Indian</th>
-				<th>Sumatran</th>
-				<th>Javan</th>
+			  <th class=fix>Rhino species</th>
+			  <th>White</th>
+			  <th>Black</th>
+			  <th>Indian</th>
+			  <th>Sumatran</th>
+			  <th>Javan</th>
 			</tr>
 			<tr>
-				<th class=fix>Distance as the crow flies in km</th>
-				<td><p id="wdist">Distance not detected yet. </p></td>
-				<td><p id="bdist">Distance not detected yet. </p></td>
-				<td><p id="idist">Distance not detected yet. </p></td>
-				<td><p id="sdist">Distance not detected yet. </p></td>
-				<td><p id="jdist">Distance not detected yet. </p></td>
+			  <th class=fix>Population</th>
+			  <td>20000</td>
+			  <td>5000</td>
+			  <td>3500</td>
+			  <td>100</td>
+			  <td>60</td>
+			</tr>
+			<tr>
+			  <th class=fix>Habitat</th>
+			  <td>Southern Africa</td>
+			  <td>Eastern and Southern Africa</td>
+			  <td>Northeast India and Nepal</td>
+			  <td>Sumatra and Borneo, Indonesia</td>
+			  <td>Java, Indonesia</td>
 			</tr>
 		</table>
+	  </div>
 	</div>
-</div>
-<div style="max-width: 1000px" >
+</section>
+<section id="location" class="content">
+	<button onclick="getLocation()">Get initial location</button>
 
-<img src="Image/Rhinosizes.png" style="max-width:100%;" alt="The size of the five rhino species is shown. The order from largest to smallest is: White and Indian are roughly equal, Black, Javan and lastly Sumatran." title="Comparison of the sizes of the five rhino species">
-</div>
+	<p id="geoloc">Geolocation not available.</p>
 
+	<button id="calc" onclick="calcDistance()">Get distance to initial location</button>
 
-<script>
-
-var x = document.getElementById("geoloc");
-var y = document.getElementById("dist");
-
-var wd = document.getElementById("wdist");
-var bd = document.getElementById("bdist");
-var id = document.getElementById("idist");
-var sd = document.getElementById("sdist");
-var jd = document.getElementById("jdist");
-
-var lat;
-var lon;
-
-var wdistance;
-var bdistance;
-var idistance;
-var sdistance;
-var jdistance;
-
-var wlat = -24.003813 * Math.PI / 180;
-var wlon = 31.523483 * Math.PI / 180;
-
-var blat = -1.522039 * Math.PI / 180;
-var blon = 35.337010 * Math.PI / 180;
-
-var ilat = 26.604285 * Math.PI / 180;
-var ilon = 93.388778 * Math.PI / 180;
-
-var slat = -4.919436 * Math.PI / 180;
-var slon = 105.753611 * Math.PI / 180;
-
-var jlat = -6.784571 * Math.PI / 180;
-var jlon = 105.380081 * Math.PI / 180;
-
-var r = 6371;
-
-
-
-function getLocation() {
-    if (navigator.geolocation) {
-        navigator.geolocation.getCurrentPosition(showPosition, showError);
-    } else { 
-        x.innerHTML = "Geolocation is not supported by this browser.";
-    }
-}
-
-function showPosition(position) {
-	lat = position.coords.latitude * Math.PI / 180 /** 111000*/;
-	lon = position.coords.longitude * Math.PI / 180 /** 111000*/;
-    x.innerHTML = "Latitude: " + position.coords.latitude + 
-    "<br>Longitude: " + position.coords.longitude;	
-}
-
-function showError(error) {
-    switch(error.code) {
-        case error.PERMISSION_DENIED:
-            x.innerHTML = "User denied the request for Geolocation."
-            break;
-        case error.POSITION_UNAVAILABLE:
-            x.innerHTML = "Location information is unavailable."
-            break;
-        case error.TIMEOUT:
-            x.innerHTML = "The request to get user location timed out."
-            break;
-        case error.UNKNOWN_ERROR:
-            x.innerHTML = "An unknown error occurred."
-            break;
-    }
-}
-function distance(lat1,lon1,lat2,lon2) {
-	var dlat = (lat2 - lat1)/2;
-	var dlon = (lon2 - lon1)/2;
+	<!--
+	<p id="dist">Distance not detected yet. </p>
+	-->
+	<div class="outer">
+		<div class="inner">
+			<table>
+				<tr>
+					<th class=fix>Rhino species</th>
+					<th>White</th>
+					<th>Black</th>
+					<th>Indian</th>
+					<th>Sumatran</th>
+					<th>Javan</th>
+				</tr>
+				<tr>
+					<th class=fix>Distance as the crow flies in km</th>
+					<td><p id="wdist">Distance not detected yet. </p></td>
+					<td><p id="bdist">Distance not detected yet. </p></td>
+					<td><p id="idist">Distance not detected yet. </p></td>
+					<td><p id="sdist">Distance not detected yet. </p></td>
+					<td><p id="jdist">Distance not detected yet. </p></td>
+				</tr>
+			</table>
+		</div>
+	</div>
 	
-	var temp = Math.pow(Math.sin(dlat), 2) + Math.cos(lat1) * 
-		Math.cos(lat2) * Math.pow(Math.sin(dlon), 2);
-
-	return 2 * r * Math.asin(Math.sqrt(temp));
-}
-
-function calcDistance() {
-
-	wdistance = distance(lat,wlat,lon,wlon);
-	bdistance = distance(lat,blat,lon,blon);
-	idistance = distance(lat,ilat,lon,ilon);
-	sdistance = distance(lat,slat,lon,slon);
-	jdistance = distance(lat,jlat,lon,jlon);
-
-	/*
-	y.innerHTML = "Distances: " + wdistance + " " + bdistance + " " + idistance + " " + sdistance + " " + jdistance + " " ;
-	*/
+	<p>
+	<a href="javascript:void(0)" onclick="selectLocation(0);">White rhino</a> | 
+	<a href="javascript:void(0)" onclick="selectLocation(1);">Black rhino</a> |  
+	<a href="javascript:void(0)" onclick="selectLocation(2);">Indian rhino</a> |
+	<a href="javascript:void(0)" onclick="selectLocation(3);">Sumatran Rhino</a> |
+	<a href="javascript:void(0)" onclick="selectLocation(4);">Javan Rhino</a>
+	</p>
+	<iframe
+		id="whiteLocation"
+		width="600"
+		height="450"
+		frameborder="0" style="border:0"
+		src="https://www.google.com/maps/embed/v1/place?key=AIzaSyAZyyisWD6opTg7vkOCUs0ODo3auLqosFU
+			&q=Kruger+National+Park,South+Africa&zoom=4" allowfullscreen>
+	</iframe>
 	
-	wd.innerHTML = wdistance.toFixed(2);
-	bd.innerHTML = bdistance.toFixed(2);
-	id.innerHTML = idistance.toFixed(2);
-	sd.innerHTML = sdistance.toFixed(2);
-	jd.innerHTML = jdistance.toFixed(2);
+	<iframe
+		id="blackLocation"
+		width="600"
+		height="450"
+		frameborder="0" style="border:0"
+		class="content"
+		src="https://www.google.com/maps/embed/v1/place?key=AIzaSyAZyyisWD6opTg7vkOCUs0ODo3auLqosFU
+			&q=Etosha+National+Park,South+Africa&zoom=4" allowfullscreen>
+	</iframe>
+	<iframe
+		id="indiaLocation"
+		width="600"
+		height="450"
+		frameborder="0" style="border:0"
+		class="content"
+		src="https://www.google.com/maps/embed/v1/place?key=AIzaSyAZyyisWD6opTg7vkOCUs0ODo3auLqosFU
+		&q=Kaziranga+National+Park,India&zoom=4" allowfullscreen>
+	</iframe>
+	
+	<iframe
+		id="sumatraLocation"
+		width="600"
+		height="450"
+		frameborder="0" style="border:0"
+		class="content"
+		src="https://www.google.com/maps/embed/v1/place?key=AIzaSyAZyyisWD6opTg7vkOCUs0ODo3auLqosFU
+		&q=Way+Kambas+National+Park,Indonesia&zoom=4" allowfullscreen>
+	</iframe>
+	
+	<iframe
+		id="javaLocation"
+		width="600"
+		height="450"
+		frameborder="0" style="border:0"
+		class="content"
+		src="https://www.google.com/maps/embed/v1/place?key=AIzaSyAZyyisWD6opTg7vkOCUs0ODo3auLqosFU
+		&q=Ujong+Kulon+National+Park,Indonesia&zoom=4" allowfullscreen>
+	</iframe>
+</section>
 
-}
+<section id="poaching" class="content">
+	<h2> Rhino poaching </h2>
+</section>
 
-</script>
+
+<section id="images" class="content">
+	<div style="max-width: 1000px" >
+	<img src="Image/Rhinosizes.png" style="max-width:100%;" alt="The size of the five rhino species is shown. The order from largest to smallest is: White and Indian are roughly equal, Black, Javan and lastly Sumatran." title="Comparison of the sizes of the five rhino species">
+	</div>
+</section>
+
+
 
     
 
