--- a/ExamTask1/index.html
+++ b/ExamTask1/index.html
@@ -8,6 +8,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1" /> 
 	<script src="js/script.js"></script>
     <link rel="stylesheet" href="css/style.css">
+	<!-- <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css"> -->
 	
 	<p align="left">
 	
@@ -21,42 +22,73 @@
 
 <body onload="selectFittingCSS();">
 <div class="header">
-	
-	
-	<header>
-		<h1 class="left"> Rhinos </h1>
+
+
+	<header> 
+	<!-- <div class="w3-teal" id="mobileMenu" style="float:left"> -->
+  <!-- <button class="w3-button w3-teal w3-xlarge" onclick="w3_open()">☰</button> -->
+  <!-- <div class="w3-container" > -->
+
+  <!-- </div> -->
+<!-- </div>	 -->
+		<span id="mobileMenu" style="display:none" style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776; open</span>
+		<h1 class="left" style="float:left"> Rhinos </h1>
 		<h5 class="right"> by Sachin Rajgopal </h5>
 		
 	</header>
 	
 	<nav>
-	
-		<a href="javascript:void(0)" id="a" onclick="selectSection(0);" class="menu">Quick peek</a> 
-		<a href="javascript:void(0)" id="b" onclick="selectSection(1);" class="menu">Rhino species</a> 
-		<a href="javascript:void(0)" id="c" onclick="selectSection(2);" class="menu">Location of rhinos</a>
-		<a href="javascript:void(0)" id="d" onclick="selectSection(3);" class="menu">Poaching</a>
-		<a href="javascript:void(0)" id="e" onclick="selectSection(4);" class="menu">Images</a>
+		<div id="desktopMenu">
+			<a href="javascript:void(0)" id="a" onclick="selectSection(0);" class="menu">Quick peek</a> 
+			<a href="javascript:void(0)" id="b" onclick="selectSection(1);" class="menu">Rhino species</a> 
+			<a href="javascript:void(0)" id="c" onclick="selectSection(2);" class="menu">Location of rhinos</a>
+			<a href="javascript:void(0)" id="d" onclick="selectSection(3);" class="menu">Poaching</a>
+			<a href="javascript:void(0)" id="e" onclick="selectSection(4);" class="menu">Images</a>
+		</div>
 		
-	</nav>	
+		
+		
+		<!-- <div class="w3-sidebar w3-bar-block" style="display:none" id="mySidebar"> -->
+		  <!-- <button onclick="w3_close()" class="w3-bar-item w3-button w3-large">Close &times;</button> -->
+				<!-- <a href="javascript:void(0)" id="a" onclick="selectSection(0);" class="w3-bar-item w3-button">Quick peek</a>  -->
+				<!-- <a href="javascript:void(0)" id="b" onclick="selectSection(1);" class="w3-bar-item w3-button">Rhino species</a>  -->
+				<!-- <a href="javascript:void(0)" id="c" onclick="selectSection(2);" class="w3-bar-item w3-button">Location of rhinos</a> -->
+				<!-- <a href="javascript:void(0)" id="d" onclick="selectSection(3);" class="w3-bar-item w3-button">Poaching</a> -->
+				<!-- <a href="javascript:void(0)" id="e" onclick="selectSection(4);" class="w3-bar-item w3-button">Images</a> -->
+		<!-- </div> -->
+		
+		 <div id="mySidenav" class="sidenav">
+			  <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+			  
+				<a href="javascript:void(0)" id="a" onclick="selectSection(0);" >Quick peek</a> 
+				<a href="javascript:void(0)" id="b" onclick="selectSection(1);" >Rhino species</a> 
+				<a href="javascript:void(0)" id="c" onclick="selectSection(2);" >Location of rhinos</a>
+				<a href="javascript:void(0)" id="d" onclick="selectSection(3);" >Poaching</a>
+				<a href="javascript:void(0)" id="e" onclick="selectSection(4);" >Images</a>
+		</div>
+
+<!-- Use any element to open the sidenav -->
+<span onclick="openNav()">open</span>
+
+<!-- Add all page content inside this div if you want the side nav to push page content to the right (not used if you only want the sidenav to sit on top of the page -->
+<div id="main">
+  ...
+</div> 
+
+	</nav>
+<script>
+	/* Set the width of the side navigation to 250px */
+function openNav() {
+    document.getElementById("mySidenav").style.width = "250px";
+}
+
+/* Set the width of the side navigation to 0 */
+function closeNav() {
+    document.getElementById("mySidenav").style.width = "0";
+} 
 	
-
+</script>
 	
-</div>	
-
-<!-- <div class="w3-sidebar w3-bar-block" style="display:none" id="mySidebar"> -->
-  <!-- <button onclick="w3_close()" class="w3-bar-item w3-button w3-large">Close &times;</button> -->
-  <!-- <a href="#" class="w3-bar-item w3-button">Link 1</a> -->
-  <!-- <a href="#" class="w3-bar-item w3-button">Link 2</a> -->
-  <!-- <a href="#" class="w3-bar-item w3-button">Link 3</a> -->
-<!-- </div> -->
-
-<!-- <div class="w3-teal"> -->
-  <!-- <button class="w3-button w3-teal w3-xlarge" onclick="w3_open()">☰</button> -->
-  <!-- <div class="w3-container"> -->
-    <!-- <h1>My Page</h1> -->
-  <!-- </div> -->
-<!-- </div> -->
-
 <!-- <script> -->
 <!-- function w3_open() { -->
     <!-- document.getElementById("mySidebar").style.width = "100%"; -->
@@ -66,6 +98,12 @@
     <!-- document.getElementById("mySidebar").style.display = "none"; -->
 <!-- } -->
 <!-- </script> -->
+	
+	
+
+	
+</div>	
+
 	
 		
 	<section id="about">
