Try media handheld

--- a/ExamTask1/index.html
+++ b/ExamTask1/index.html
@@ -31,7 +31,7 @@
 
   <!-- </div> -->
 <!-- </div>	 -->
-		<span id="mobileMenu" style="display:none;" style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776; open</span>
+		<span id="mobileMenu" style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776; open</span>
 		<h1 class="left" style="float:left"> Rhinos </h1>
 		<h5 class="right"> by Sachin Rajgopal </h5>
 		
