Test google maps own location

--- a/ExamTask1/index.html
+++ b/ExamTask1/index.html
@@ -43,19 +43,9 @@
 			<a href="javascript:void(0)" id="b" onclick="selectSection(1);" class="menu">Rhino species</a> 
 			<a href="javascript:void(0)" id="c" onclick="selectSection(2);" class="menu">Location of rhinos</a>
 			<a href="javascript:void(0)" id="d" onclick="selectSection(3);" class="menu">Poaching</a>
-			<a href="javascript:void(0)" id="e" onclick="selectSection(4);" class="menu">Images</a>
+			<a href="javascript:void(0)" id="e" onclick="selectSection(4);" class="menu">About</a>
 		</div>
 		
-		
-		
-		<!-- <div class="w3-sidebar w3-bar-block" style="display:none" id="mySidebar"> -->
-		  <!-- <button onclick="w3_close()" class="w3-bar-item w3-button w3-large">Close &times;</button> -->
-				<!-- <a href="javascript:void(0)" id="a" onclick="selectSection(0);" class="w3-bar-item w3-button">Quick peek</a>  -->
-				<!-- <a href="javascript:void(0)" id="b" onclick="selectSection(1);" class="w3-bar-item w3-button">Rhino species</a>  -->
-				<!-- <a href="javascript:void(0)" id="c" onclick="selectSection(2);" class="w3-bar-item w3-button">Location of rhinos</a> -->
-				<!-- <a href="javascript:void(0)" id="d" onclick="selectSection(3);" class="w3-bar-item w3-button">Poaching</a> -->
-				<!-- <a href="javascript:void(0)" id="e" onclick="selectSection(4);" class="w3-bar-item w3-button">Images</a> -->
-		<!-- </div> -->
 		
 		 <div id="mySidenav" class="sidenav">
 			  <a class="sideBarMenu" href="javascript:void(0)" class="closebtn" onclick="closeNav()">Close sidebar<!--&times;--></a>
@@ -64,7 +54,7 @@
 				<a class="sideBarMenu" href="javascript:void(0)" id="b" onclick="selectSection(1); closeNav();" >Rhino species</a> 
 				<a class="sideBarMenu" href="javascript:void(0)" id="c" onclick="selectSection(2); closeNav();" >Rhino location</a>
 				<a class="sideBarMenu" href="javascript:void(0)" id="d" onclick="selectSection(3); closeNav();" >Poaching</a>
-				<a class="sideBarMenu" href="javascript:void(0)" id="e" onclick="selectSection(4); closeNav();" >Images</a>
+				<a class="sideBarMenu" href="javascript:void(0)" id="e" onclick="selectSection(4); closeNav();" >About</a>
 		</div>
 
 <!-- Use any element to open the sidenav -->
@@ -109,10 +99,15 @@ function closeNav() {
 	<section id="about">
 		<h2> About Rhinos </h2>
 		<p class="responsive"> 
-		Rhinos are the second largest land animals after elephants. Here is some info 
+		Welcome to this site about rhinos! 
+		Rhinos are the second largest land animals after elephants, but they are not as popular or known as them, so this site will hopefully help people find out more about rhinos and the challenges they face.
 		</p>
 		<!-- <img src="Image/IndianRhinoCover.jpg" width="800" class="responsive"  alt="Indian rhino standing"> -->
 		
+		<p class ="responsive">
+		There are five rhino species: White, Black, Indian, Sumatran and Javan. Most of the species have subspecies which tend to be diffrentiate. 
+		The species themselves have characteristics with which they can be distinguished, such as size or number of horns.
+		</p>
 		<h2> Comparison Table </h2>
 
 
@@ -159,10 +154,47 @@ function closeNav() {
 				  <td>2</td>
 				  <td>1</td>
 				</tr>
+				<tr>
+				  <th class="fix">Weight (kg)</th>
+				  <td>1800-2700</td>
+				  <td>800-1350</td>
+				  <td>1800-2500</td>
+				  <td>600-950</td>
+				  <td>900-2300</td>
+				</tr>
+				<tr>
+				  <th class="fix">Height (m)</th>
+				  <td>1.5-1.8</td>
+				  <td>1.4-1.7</td>
+				  <td>1.75-2</td>
+				  <td>1.0-1.5</td>
+				  <td>1.5-1.7</td>
+				</tr>
 			</table>
 		  </div>
 		</div>
-		<div id="container" style="min-width: 310px; height: 400px; max-width: 600px; margin: 0 auto"></div>		
+		
+		<p>
+			Many people think of all rhinos having two horns, or that all rhinos come from Africa, while some people might have heard about the Indian rhino. 
+			The Javan and Sumatran rhino are virtually unknown, and this is due making up only 0.5% of the total rhino population combined, as seen in the figure below.
+			
+		</p>
+		<figure>
+			<div id="container" style="min-width: 310px; height: 400px; max-width: 600px; margin: 0 auto"></div>		
+			<figcaption> The distribution of the rhino population </figcaption>		
+		</figure>
+		
+		<p>
+			The Sumatran rhino is only seen in captivity in one place outside Indonesia and Malaysia, and the Javan rhino is not seen in captivity currently, so it is understandable why they are unknown.
+			Many people might also not be able to see the differences between the rhino species. Hopefully the table and graphic below will help a bit.
+		</p>
+		
+		<figure>
+			<img src="Image/Rhinosizes.png" style="max-width:100%;" alt="The size of the five rhino species is shown. The order from largest to smallest is: White and Indian are roughly equal, Black, Javan and lastly Sumatran." title="Comparison of the sizes of the five rhino species">
+			
+			<figcaption> Size comparison of the five types of rhinos. White rhinos are normally larger than Indian rhinos. </figcaption>
+		</figure>
+		
 	</section>
 
 	<section id="species" class="content">
@@ -242,7 +274,7 @@ function closeNav() {
 	<section id="location" class="content">
 		<button onclick="getLocation();" class="fi")">Get initial location</button>
 
-		<p id="geoloc" >Geolocation not activated yet.</p>
+		<p id="geoloc" >Latitude: <br> Longitude:</p>
 
 		<button id="calc" onclick="calcDistance()">Get distance to initial location</button>
 
@@ -261,24 +293,37 @@ function closeNav() {
 						<th>Javan</th>
 					</tr>
 					<tr>
-						<th class=fix><br>Distance as the crow flies in km</br></th>
-						<td><p id="wdist">Distance not detected yet. </p></td>
-						<td><p id="bdist">Distance not detected yet. </p></td>
-						<td><p id="idist">Distance not detected yet. </p></td>
-						<td><p id="sdist">Distance not detected yet. </p></td>
-						<td><p id="jdist">Distance not detected yet. </p></td>
+						<th class=fix>Distance as the crow flies in km</th>
+						<td><div id="wdist">Distance not detected yet. </div></td>
+						<td><div id="bdist">Distance not detected yet. </div></td>
+						<td><div id="idist">Distance not detected yet. </div></td>
+						<td><div id="sdist">Distance not detected yet. </div></td>
+						<td><div id="jdist">Distance not detected yet. </div></td>
 					</tr>
 				</table>
 			</div>
 		</div>
 		
 		<p>
+		<a href="javascript:void(0)" onclick="selectLocation(5);">Your location</a> |
 		<a href="javascript:void(0)" onclick="selectLocation(0);">White rhino</a> | 
 		<a href="javascript:void(0)" onclick="selectLocation(1);">Black rhino</a> |  
 		<a href="javascript:void(0)" onclick="selectLocation(2);">Indian rhino</a> |
 		<a href="javascript:void(0)" onclick="selectLocation(3);">Sumatran Rhino</a> |
 		<a href="javascript:void(0)" onclick="selectLocation(4);">Javan Rhino</a>
 		</p>
+		
+		<div id="mapholder"> </div>
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAZyyisWD6opTg7vkOCUs0ODo3auLqosFU"></script>
+		<!-- <iframe -->
+			<!-- id="yourLocation" -->
+			<!-- width="100%" -->
+			<!-- height="450" -->
+			<!-- frameborder="0" style="border:0" -->
+			<!-- class="mapInit" -->
+		<!-- > -->
+		<!-- </iframe> -->
+		
 		<iframe
 			id="whiteLocation"
 			width="100%"
@@ -356,7 +401,6 @@ function closeNav() {
 
 	<section id="images" class="content">
 		<div style="max-width: 1000px" >
-		<img src="Image/Rhinosizes.png" style="max-width:100%;" alt="The size of the five rhino species is shown. The order from largest to smallest is: White and Indian are roughly equal, Black, Javan and lastly Sumatran." title="Comparison of the sizes of the five rhino species">
 		</div>
 	</section>
 
@@ -506,13 +550,6 @@ function closeNav() {
         }
     },
     tooltip: {
-        <!-- headerFormat: '<span style="font-size:10px">{point.key}</span><table>', -->
-        <!-- pointFormat: '<tr><td style="color:{series.color};padding:0">{series.name}: </td>' + -->
-            <!-- '<td style="padding:0"><b>{point.y:.1f} </b></td></tr>', -->
-        <!-- footerFormat: '</table>', -->
-		<!-- formatter: function () { -->
-                <!-- return 'x: '+ this.x + ', y: ' + this.y+ ', z: ' + this.point.z; -->
-            <!-- }, -->
         shared: true,
         useHTML: true
 		
@@ -549,24 +586,6 @@ function closeNav() {
 		lineColor: 'transparent'    // make the line invisible
 
 	}
-	<!-- { -->
-        <!-- name: 'Tokyo', -->
-        <!-- data: [49.9, 71.5, 106.4, 129.2, 144.0, 176.0, 135.6, 148.5, 216.4, 194.1, 95.6, 54.4] -->
-
-    <!-- } -->
-	<!-- , { -->
-        <!-- name: 'New York', -->
-        <!-- data: [83.6, 78.8, 98.5, 93.4, 106.0, 84.5, 105.0, 104.3, 91.2, 83.5, 106.6, 92.3] -->
-
-    <!-- }, { -->
-        <!-- name: 'London', -->
-        <!-- data: [48.9, 38.8, 39.3, 41.4, 47.0, 48.3, 59.0, 59.6, 52.4, 65.2, 59.3, 51.2] -->
-
-    <!-- }, { -->
-        <!-- name: 'Berlin', -->
-        <!-- data: [42.4, 33.2, 34.5, 39.7, 52.6, 75.5, 57.4, 60.4, 47.6, 39.1, 46.8, 51.1] -->
-
-    <!-- } -->
 	]
 });
 	
